Fix module import bug

--- a/examples/mono_camera_example.ipynb
+++ b/examples/mono_camera_example.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.644867Z",
-     "start_time": "2024-10-31T22:30:22.633868Z"
+     "end_time": "2024-10-31T23:12:59.305678Z",
+     "start_time": "2024-10-31T23:12:59.286685Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "f1902de9ebff5a59",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 50
   },
   {
    "metadata": {},
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.836868Z",
-     "start_time": "2024-10-31T22:30:22.819871Z"
+     "end_time": "2024-10-31T23:12:59.522989Z",
+     "start_time": "2024-10-31T23:12:59.511973Z"
     }
    },
    "cell_type": "code",
@@ -83,7 +83,7 @@
    ],
    "id": "afa5cf8d9cf2a145",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.852871Z",
-     "start_time": "2024-10-31T22:30:22.842867Z"
+     "end_time": "2024-10-31T23:12:59.600969Z",
+     "start_time": "2024-10-31T23:12:59.580973Z"
     }
    },
    "cell_type": "code",
@@ -116,7 +116,7 @@
    ],
    "id": "fd93d3dbf5535e4b",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 52
   },
   {
    "metadata": {},
@@ -127,15 +127,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.867878Z",
-     "start_time": "2024-10-31T22:30:22.856887Z"
+     "end_time": "2024-10-31T23:12:59.631971Z",
+     "start_time": "2024-10-31T23:12:59.627969Z"
     }
    },
    "cell_type": "code",
    "source": "dt = 0.01  # [s]",
    "id": "af1c2296132affea",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 53
   },
   {
    "metadata": {},
@@ -146,8 +146,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.914868Z",
-     "start_time": "2024-10-31T22:30:22.871868Z"
+     "end_time": "2024-10-31T23:12:59.678979Z",
+     "start_time": "2024-10-31T23:12:59.647975Z"
     }
    },
    "cell_type": "code",
@@ -159,7 +159,7 @@
    ],
    "id": "a2ba514ec911b5e9",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 54
   },
   {
    "metadata": {},
@@ -170,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.930868Z",
-     "start_time": "2024-10-31T22:30:22.917873Z"
+     "end_time": "2024-10-31T23:12:59.693972Z",
+     "start_time": "2024-10-31T23:12:59.682975Z"
     }
    },
    "cell_type": "code",
@@ -185,13 +185,13 @@
    ],
    "id": "27615e7f576460b1",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:22.946872Z",
-     "start_time": "2024-10-31T22:30:22.934874Z"
+     "end_time": "2024-10-31T23:12:59.804970Z",
+     "start_time": "2024-10-31T23:12:59.795968Z"
     }
    },
    "cell_type": "code",
@@ -212,7 +212,7 @@
    ],
    "id": "65fe013fd3e27a7d",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 56
   },
   {
    "metadata": {},
@@ -223,21 +223,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:23.372017Z",
-     "start_time": "2024-10-31T22:30:22.955874Z"
+     "end_time": "2024-10-31T23:13:00.313976Z",
+     "start_time": "2024-10-31T23:12:59.853968Z"
     }
    },
    "cell_type": "code",
    "source": "t_sim, x_sim, u_sim, y_sim = simulator.simulate(x0=x0, u=u, return_full_output=True)",
    "id": "eed7753f15c19a68",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:23.527013Z",
-     "start_time": "2024-10-31T22:30:23.376003Z"
+     "end_time": "2024-10-31T23:13:00.472978Z",
+     "start_time": "2024-10-31T23:13:00.319979Z"
     }
    },
    "cell_type": "code",
@@ -254,10 +254,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2a7e365fe80>"
+       "<matplotlib.legend.Legend at 0x2a7e1152850>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +272,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 58
   },
   {
    "metadata": {},
@@ -289,21 +289,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:23.543009Z",
-     "start_time": "2024-10-31T22:30:23.532005Z"
+     "end_time": "2024-10-31T23:13:00.487973Z",
+     "start_time": "2024-10-31T23:13:00.476975Z"
     }
    },
    "cell_type": "code",
    "source": "w = 6  # window size, set to None to use entire time-series as one window",
    "id": "1816060219c9f891",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.622859Z",
-     "start_time": "2024-10-31T22:30:23.545006Z"
+     "end_time": "2024-10-31T23:13:13.830133Z",
+     "start_time": "2024-10-31T23:13:00.490973Z"
     }
    },
    "cell_type": "code",
@@ -313,13 +313,13 @@
    ],
    "id": "6d3208ab8cebb1f8",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 60
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.638862Z",
-     "start_time": "2024-10-31T22:30:36.630860Z"
+     "end_time": "2024-10-31T23:13:13.845158Z",
+     "start_time": "2024-10-31T23:13:13.836214Z"
     }
    },
    "cell_type": "code",
@@ -329,13 +329,13 @@
    ],
    "id": "2ea89c4c3fdd5747",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.654858Z",
-     "start_time": "2024-10-31T22:30:36.642860Z"
+     "end_time": "2024-10-31T23:13:13.861162Z",
+     "start_time": "2024-10-31T23:13:13.849165Z"
     }
    },
    "cell_type": "code",
@@ -353,13 +353,13 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 62
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.907859Z",
-     "start_time": "2024-10-31T22:30:36.659859Z"
+     "end_time": "2024-10-31T23:13:14.133156Z",
+     "start_time": "2024-10-31T23:13:13.865171Z"
     }
    },
    "cell_type": "code",
@@ -381,7 +381,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 38
+   "execution_count": 63
   },
   {
    "metadata": {},
@@ -392,8 +392,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.922861Z",
-     "start_time": "2024-10-31T22:30:36.911861Z"
+     "end_time": "2024-10-31T23:13:14.149161Z",
+     "start_time": "2024-10-31T23:13:14.137161Z"
     }
    },
    "cell_type": "code",
@@ -403,13 +403,13 @@
    ],
    "id": "451fd6cf6383e439",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.954074Z",
-     "start_time": "2024-10-31T22:30:36.926861Z"
+     "end_time": "2024-10-31T23:13:14.181155Z",
+     "start_time": "2024-10-31T23:13:14.153154Z"
     }
    },
    "cell_type": "code",
@@ -423,13 +423,13 @@
    ],
    "id": "9aaaf5056bf75fed",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:36.985116Z",
-     "start_time": "2024-10-31T22:30:36.958068Z"
+     "end_time": "2024-10-31T23:13:14.213156Z",
+     "start_time": "2024-10-31T23:13:14.185159Z"
     }
    },
    "cell_type": "code",
@@ -486,12 +486,12 @@
        "</div>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 66
   },
   {
    "metadata": {},
@@ -502,8 +502,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:37.001065Z",
-     "start_time": "2024-10-31T22:30:36.989066Z"
+     "end_time": "2024-10-31T23:13:14.229218Z",
+     "start_time": "2024-10-31T23:13:14.216159Z"
     }
    },
    "cell_type": "code",
@@ -520,13 +520,13 @@
    ],
    "id": "94b30b60ed5543e9",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:41.659069Z",
-     "start_time": "2024-10-31T22:30:37.004067Z"
+     "end_time": "2024-10-31T23:13:18.986279Z",
+     "start_time": "2024-10-31T23:13:14.232158Z"
     }
    },
    "cell_type": "code",
@@ -537,13 +537,13 @@
    ],
    "id": "b77d1363934e9933",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:41.674073Z",
-     "start_time": "2024-10-31T22:30:41.663067Z"
+     "end_time": "2024-10-31T23:13:19.001278Z",
+     "start_time": "2024-10-31T23:13:18.991283Z"
     }
    },
    "cell_type": "code",
@@ -553,13 +553,13 @@
    ],
    "id": "bf67c35cfee44ceb",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:41.721075Z",
-     "start_time": "2024-10-31T22:30:41.682068Z"
+     "end_time": "2024-10-31T23:13:19.031284Z",
+     "start_time": "2024-10-31T23:13:19.005288Z"
     }
    },
    "cell_type": "code",
@@ -693,12 +693,12 @@
        "</div>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 45
+   "execution_count": 70
   },
   {
    "metadata": {},
@@ -709,8 +709,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:42.037069Z",
-     "start_time": "2024-10-31T22:30:41.725068Z"
+     "end_time": "2024-10-31T23:13:19.302285Z",
+     "start_time": "2024-10-31T23:13:19.035294Z"
     }
    },
    "cell_type": "code",
@@ -745,7 +745,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 46
+   "execution_count": 71
   },
   {
    "metadata": {},
@@ -756,21 +756,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:42.053068Z",
-     "start_time": "2024-10-31T22:30:42.042069Z"
+     "end_time": "2024-10-31T23:13:19.318283Z",
+     "start_time": "2024-10-31T23:13:19.307282Z"
     }
    },
    "cell_type": "code",
    "source": "EV_no_nan = EV_aligned.fillna(method='bfill').fillna(method='ffill')",
    "id": "331553b8964df341",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:43.823069Z",
-     "start_time": "2024-10-31T22:30:42.058074Z"
+     "end_time": "2024-10-31T23:13:20.973282Z",
+     "start_time": "2024-10-31T23:13:19.321287Z"
     }
    },
    "cell_type": "code",
@@ -818,10 +818,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n"
+      "<matplotlib.colors.LogNorm object at 0x000002A7E5FD5670>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E5FD5670>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E5FD5670>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E5FD5670>\n"
      ]
     },
     {
@@ -835,20 +835,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 48
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T22:30:43.839069Z",
-     "start_time": "2024-10-31T22:30:43.828075Z"
+     "end_time": "2024-10-31T23:13:20.989281Z",
+     "start_time": "2024-10-31T23:13:20.977287Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "5d364ffb98b817bf",
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 73
   }
  ],
  "metadata": {
