Remove time input for EmpiricalObservabilityMatrix, not needed

--- a/examples/mono_camera_example.ipynb
+++ b/examples/mono_camera_example.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.677950Z",
-     "start_time": "2024-11-05T10:22:12.222971Z"
+     "end_time": "2024-12-05T23:36:01.260703Z",
+     "start_time": "2024-12-05T23:36:00.439320Z"
     }
    },
    "cell_type": "code",
@@ -29,7 +29,7 @@
      ]
     }
    ],
-   "execution_count": 391
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -75,8 +75,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.725865Z",
-     "start_time": "2024-11-05T10:22:12.678941Z"
+     "end_time": "2024-12-05T23:36:01.338621Z",
+     "start_time": "2024-12-05T23:36:01.264221Z"
     }
    },
    "cell_type": "code",
@@ -101,7 +101,7 @@
    ],
    "id": "afa5cf8d9cf2a145",
    "outputs": [],
-   "execution_count": 392
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -117,8 +117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.757989Z",
-     "start_time": "2024-11-05T10:22:12.726866Z"
+     "end_time": "2024-12-05T23:36:01.430588Z",
+     "start_time": "2024-12-05T23:36:01.342619Z"
     }
    },
    "cell_type": "code",
@@ -139,7 +139,7 @@
    ],
    "id": "fd93d3dbf5535e4b",
    "outputs": [],
-   "execution_count": 393
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -150,15 +150,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.805700Z",
-     "start_time": "2024-11-05T10:22:12.757989Z"
+     "end_time": "2024-12-05T23:36:01.553687Z",
+     "start_time": "2024-12-05T23:36:01.434587Z"
     }
    },
    "cell_type": "code",
    "source": "dt = 0.01  # [s]",
    "id": "af1c2296132affea",
    "outputs": [],
-   "execution_count": 394
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -172,8 +172,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.852431Z",
-     "start_time": "2024-11-05T10:22:12.806701Z"
+     "end_time": "2024-12-05T23:36:01.675805Z",
+     "start_time": "2024-12-05T23:36:01.560754Z"
     }
    },
    "cell_type": "code",
@@ -185,7 +185,7 @@
    ],
    "id": "a2ba514ec911b5e9",
    "outputs": [],
-   "execution_count": 395
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -206,8 +206,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.899294Z",
-     "start_time": "2024-11-05T10:22:12.853431Z"
+     "end_time": "2024-12-05T23:36:01.766687Z",
+     "start_time": "2024-12-05T23:36:01.679907Z"
     }
    },
    "cell_type": "code",
@@ -219,13 +219,13 @@
    ],
    "id": "27615e7f576460b1",
    "outputs": [],
-   "execution_count": 396
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.945813Z",
-     "start_time": "2024-11-05T10:22:12.900294Z"
+     "end_time": "2024-12-05T23:36:01.860027Z",
+     "start_time": "2024-12-05T23:36:01.770590Z"
     }
    },
    "cell_type": "code",
@@ -235,13 +235,13 @@
    ],
    "id": "b3f38c2b2abb7d4",
    "outputs": [],
-   "execution_count": 397
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:12.992820Z",
-     "start_time": "2024-11-05T10:22:12.946813Z"
+     "end_time": "2024-12-05T23:36:01.953510Z",
+     "start_time": "2024-12-05T23:36:01.863028Z"
     }
    },
    "cell_type": "code",
@@ -257,13 +257,13 @@
    ],
    "id": "3d640e58a4edcf04",
    "outputs": [],
-   "execution_count": 398
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:15.758261Z",
-     "start_time": "2024-11-05T10:22:12.993836Z"
+     "end_time": "2024-12-05T23:36:07.247616Z",
+     "start_time": "2024-12-05T23:36:01.956033Z"
     }
    },
    "cell_type": "code",
@@ -273,13 +273,13 @@
    ],
    "id": "aab7f05cfefe0956",
    "outputs": [],
-   "execution_count": 399
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:15.931827Z",
-     "start_time": "2024-11-05T10:22:15.759262Z"
+     "end_time": "2024-12-05T23:36:07.654594Z",
+     "start_time": "2024-12-05T23:36:07.256149Z"
     }
    },
    "cell_type": "code",
@@ -300,13 +300,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 400
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.026483Z",
-     "start_time": "2024-11-05T10:22:15.932828Z"
+     "end_time": "2024-12-05T23:36:07.886298Z",
+     "start_time": "2024-12-05T23:36:07.658666Z"
     }
    },
    "cell_type": "code",
@@ -327,13 +327,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 401
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.121457Z",
-     "start_time": "2024-11-05T10:22:16.027484Z"
+     "end_time": "2024-12-05T23:36:08.102948Z",
+     "start_time": "2024-12-05T23:36:07.890935Z"
     }
    },
    "cell_type": "code",
@@ -354,7 +354,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 402
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -365,21 +365,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.168359Z",
-     "start_time": "2024-11-05T10:22:16.122463Z"
+     "end_time": "2024-12-05T23:36:08.195794Z",
+     "start_time": "2024-12-05T23:36:08.106985Z"
     }
    },
    "cell_type": "code",
    "source": "use_open_loop = True  # set to False to use the MPC state trajectory above, or True to use the open-loop inputs below",
    "id": "506a86af4c7ee06b",
    "outputs": [],
-   "execution_count": 403
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.448541Z",
-     "start_time": "2024-11-05T10:22:16.170359Z"
+     "end_time": "2024-12-05T23:36:08.729110Z",
+     "start_time": "2024-12-05T23:36:08.199639Z"
     }
    },
    "cell_type": "code",
@@ -407,13 +407,13 @@
    ],
    "id": "65fe013fd3e27a7d",
    "outputs": [],
-   "execution_count": 404
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.587844Z",
-     "start_time": "2024-11-05T10:22:16.449542Z"
+     "end_time": "2024-12-05T23:36:09.022936Z",
+     "start_time": "2024-12-05T23:36:08.733118Z"
     }
    },
    "cell_type": "code",
@@ -434,13 +434,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 405
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.680542Z",
-     "start_time": "2024-11-05T10:22:16.588844Z"
+     "end_time": "2024-12-05T23:36:09.211796Z",
+     "start_time": "2024-12-05T23:36:09.026961Z"
     }
    },
    "cell_type": "code",
@@ -461,13 +461,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 406
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.774256Z",
-     "start_time": "2024-11-05T10:22:16.681542Z"
+     "end_time": "2024-12-05T23:36:09.431647Z",
+     "start_time": "2024-12-05T23:36:09.216811Z"
     }
    },
    "cell_type": "code",
@@ -488,7 +488,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 407
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -505,21 +505,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:16.820107Z",
-     "start_time": "2024-11-05T10:22:16.775256Z"
+     "end_time": "2024-12-05T23:36:09.524227Z",
+     "start_time": "2024-12-05T23:36:09.434648Z"
     }
    },
    "cell_type": "code",
    "source": "w = 6  # window size, set to None to use entire time-series as one window",
    "id": "1816060219c9f891",
    "outputs": [],
-   "execution_count": 408
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.166704Z",
-     "start_time": "2024-11-05T10:22:16.821107Z"
+     "end_time": "2024-12-05T23:36:24.154187Z",
+     "start_time": "2024-12-05T23:36:09.527742Z"
     }
    },
    "cell_type": "code",
@@ -529,13 +529,13 @@
    ],
    "id": "6d3208ab8cebb1f8",
    "outputs": [],
-   "execution_count": 409
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.212800Z",
-     "start_time": "2024-11-05T10:22:24.166704Z"
+     "end_time": "2024-12-05T23:36:24.246651Z",
+     "start_time": "2024-12-05T23:36:24.158831Z"
     }
    },
    "cell_type": "code",
@@ -545,13 +545,13 @@
    ],
    "id": "2ea89c4c3fdd5747",
    "outputs": [],
-   "execution_count": 410
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.259738Z",
-     "start_time": "2024-11-05T10:22:24.213808Z"
+     "end_time": "2024-12-05T23:36:24.339166Z",
+     "start_time": "2024-12-05T23:36:24.250435Z"
     }
    },
    "cell_type": "code",
@@ -569,13 +569,13 @@
      ]
     }
    ],
-   "execution_count": 411
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.387248Z",
-     "start_time": "2024-11-05T10:22:24.260740Z"
+     "end_time": "2024-12-05T23:36:24.789552Z",
+     "start_time": "2024-12-05T23:36:24.344163Z"
     }
    },
    "cell_type": "code",
@@ -597,7 +597,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 412
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -608,8 +608,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.433134Z",
-     "start_time": "2024-11-05T10:22:24.388248Z"
+     "end_time": "2024-12-05T23:36:24.883456Z",
+     "start_time": "2024-12-05T23:36:24.794743Z"
     }
    },
    "cell_type": "code",
@@ -619,13 +619,13 @@
    ],
    "id": "451fd6cf6383e439",
    "outputs": [],
-   "execution_count": 413
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.478663Z",
-     "start_time": "2024-11-05T10:22:24.434134Z"
+     "end_time": "2024-12-05T23:36:24.992071Z",
+     "start_time": "2024-12-05T23:36:24.888157Z"
     }
    },
    "cell_type": "code",
@@ -639,13 +639,13 @@
    ],
    "id": "9aaaf5056bf75fed",
    "outputs": [],
-   "execution_count": 414
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.524690Z",
-     "start_time": "2024-11-05T10:22:24.479683Z"
+     "end_time": "2024-12-05T23:36:25.131829Z",
+     "start_time": "2024-12-05T23:36:25.002608Z"
     }
    },
    "cell_type": "code",
@@ -702,12 +702,12 @@
        "</div>"
       ]
      },
-     "execution_count": 415,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 415
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -718,8 +718,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:24.571832Z",
-     "start_time": "2024-11-05T10:22:24.525683Z"
+     "end_time": "2024-12-05T23:36:25.239262Z",
+     "start_time": "2024-12-05T23:36:25.136892Z"
     }
    },
    "cell_type": "code",
@@ -736,13 +736,13 @@
    ],
    "id": "94b30b60ed5543e9",
    "outputs": [],
-   "execution_count": 416
+   "execution_count": 48
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:26.930334Z",
-     "start_time": "2024-11-05T10:22:24.573833Z"
+     "end_time": "2024-12-05T23:36:29.969135Z",
+     "start_time": "2024-12-05T23:36:25.242268Z"
     }
    },
    "cell_type": "code",
@@ -753,13 +753,13 @@
    ],
    "id": "b77d1363934e9933",
    "outputs": [],
-   "execution_count": 417
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:26.976946Z",
-     "start_time": "2024-11-05T10:22:26.931246Z"
+     "end_time": "2024-12-05T23:36:30.075995Z",
+     "start_time": "2024-12-05T23:36:29.972139Z"
     }
    },
    "cell_type": "code",
@@ -769,13 +769,13 @@
    ],
    "id": "bf67c35cfee44ceb",
    "outputs": [],
-   "execution_count": 418
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:27.023856Z",
-     "start_time": "2024-11-05T10:22:26.977900Z"
+     "end_time": "2024-12-05T23:36:30.171366Z",
+     "start_time": "2024-12-05T23:36:30.079282Z"
     }
    },
    "cell_type": "code",
@@ -909,12 +909,12 @@
        "</div>"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 419
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -925,21 +925,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:27.070673Z",
-     "start_time": "2024-11-05T10:22:27.024869Z"
+     "end_time": "2024-12-05T23:36:30.263146Z",
+     "start_time": "2024-12-05T23:36:30.174366Z"
     }
    },
    "cell_type": "code",
    "source": "EV_no_nan = EV_aligned.fillna(method='bfill').fillna(method='ffill')",
    "id": "331553b8964df341",
    "outputs": [],
-   "execution_count": 420
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:23:02.152414Z",
-     "start_time": "2024-11-05T10:23:01.370022Z"
+     "end_time": "2024-12-05T23:36:32.051107Z",
+     "start_time": "2024-12-05T23:36:30.266667Z"
     }
    },
    "cell_type": "code",
@@ -995,10 +995,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<matplotlib.colors.LogNorm object at 0x00000151A1E3D130>\n",
-      "<matplotlib.colors.LogNorm object at 0x00000151A1E3D130>\n",
-      "<matplotlib.colors.LogNorm object at 0x00000151A1E3D130>\n",
-      "<matplotlib.colors.LogNorm object at 0x00000151A1E3D130>\n"
+      "<matplotlib.colors.LogNorm object at 0x000001C995D07790>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001C995D07790>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001C995D07790>\n",
+      "<matplotlib.colors.LogNorm object at 0x000001C995D07790>\n"
      ]
     },
     {
@@ -1012,20 +1012,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 422
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-05T10:22:27.983075Z",
-     "start_time": "2024-11-05T10:22:27.968068Z"
+     "end_time": "2024-12-05T23:36:32.066678Z",
+     "start_time": "2024-12-05T23:36:32.054111Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "2a64b673654ad7a4",
    "outputs": [],
-   "execution_count": 421
+   "execution_count": 53
   }
  ],
  "metadata": {
